--- a/Módulo 4_Características do CSS/inherit.html
+++ b/Módulo 4_Características do CSS/inherit.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Viewport</title>
-  <link rel="stylesheet" href="viewport.css">
+  <title>Inherit</title>
+  <link rel="stylesheet" href="inherit.css">
 </head>
 <body>
   
-  <h1>Este é o título</h1>
+  <h1>Título fora</h1>
 
   <div class="box">
-    <div class="box-interno">
-      Esta é uma frase
-    </div>
+    <h1>Este é o título da página</h1>
+    Textinho
   </div>
   
 </body>
