--- a/Módulo 5_Responsividade/viewport.html
+++ b/Módulo 5_Responsividade/viewport.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Desing Responsivo 2.2</title>
     <meta id="viewport" name="viewport" content="width=device-width, user-scalable=no"> <!-- VIEWPORT como navegador interpreta | usuário não da zoom-->
-    <link href="estilo52.css" rel="stylesheet" />
+    <link href="viewport.css" rel="stylesheet" />
 </head>
 <body>
     <div class="topo">
