--- a/Módulo 6_Semântica e CSS Avançado/meta tag.html
+++ b/Módulo 6_Semântica e CSS Avançado/meta tag.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="article" /> <!--Tipo site article,product,website  padrão é website-->
     <meta property="og:title" content="Título do noso artigo" /><!--Título-->
     <meta property="og:description" content="Descrição qualquer do nosso artigo" /><!--Descrição-->
-    <meta property="og:image" content="http://www.b7web.com.br/metashare/titulo_teste.jpg" /> <!--Imagem padrao 1200 x 630 com 5 mega-->
+    <meta property="og:image" content="http://www.b7web.com.br/metashare/titulo_teste.jpg" /> <!--Imagem padrao 1200 x 630 com máx 5 mega-->
     <title>Meta Tag Social Sharing</title>
 </head>
 <body>
