--- a/Módulo 6_Semântica e CSS Avançado/size e maxlength.html
+++ b/Módulo 6_Semântica e CSS Avançado/size e maxlength.html
@@ -11,7 +11,7 @@
         <input type="text" name="usuario" placeholder="Usuário" size="10" /><br /><br /> <!--TAMANHO INPUT-->
 
         Senha:<br />
-        <input type="password" name="senha" placeholder="Digite a senha" maxlength="5"/><br /><br /> <!-- MÁXIMO DE CARACTERES NO CAMPO-->
+        <input type="password" name="senha" placeholder="Digite a senha" maxlength="5"/><br /><br /> <!-- MÁXIMO DE CARACTERES NO CAMPO padrão são 20 caracteres -->
 
         <input type="submit" value="Enviar" />
     </form>
