--- a/Módulo 6_Semântica e CSS Avançado/tag audio.html
+++ b/Módulo 6_Semântica e CSS Avançado/tag audio.html
@@ -6,7 +6,7 @@
         <link href="estilo.css" rel="stylesheet" />
     </head>
     <body>
-        <audio controls >
+        <audio controls autoplay muted loop>
             <source src="Mario Song.mp3" type="audio/mpeg" /> <!--Arquivo mp3 |Suporta OGG e WAV também-->
         </audio>
     </body>
