--- a/Módulo 6_Semântica e CSS Avançado/tag vídeo.html
+++ b/Módulo 6_Semântica e CSS Avançado/tag vídeo.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <video width="480" height="270" autoplay controls><!-- CRIA PLAYER DE VÍDEO NO SITE-->
+    <video width="480" height="270" autoplay muted controls><!-- CRIA PLAYER DE VÍDEO NO SITE-->
         <source src="megaman.mp4" type="video/mp4"/><!--ARQUIVO VÍDEO-->
         <source src="megaman.ogg" type="video/ogg"/>
     </video>
