--- a/Módulo 13_Starbucks/index.html
+++ b/Módulo 13_Starbucks/index.html
@@ -28,6 +28,31 @@
       </div>
     </div>
   </header>
+
+  <section class="banner">
+    <div class="container">
+      <h1>Starbucks®<br/> Happy Hour</h1>
+      <span>We’ll meet you in your inbox. Drink deals are on their way.</span>
+      <div class="banner--images">
+        <img src="assets/images/c1.jpg" />
+        <img src="assets/images/c2.jpg" />
+        <img src="assets/images/c3.jpg" />
+      </div>
+    </div>
+  </section>
   
+  <section class="area1">
+    <div class="area1--content">
+      <div class="bar"></div>
+      <h2>Four Drinks, A Million<br/> Reasons </h2>
+      <div class="area1--quote"><em>"Just love yourself and you're set." – Lady Gaga</em></div>
+      <div class="area1--text">Lady Gaga and Starbucks share a mission: to build a kinder, braver world. Through the Born This Way Foundation, Lady Gaga has inspired her fans to embrace kindness in their communities—online and in the world. With your help, we can empower young people to spread more kindness.</div>
+
+      <a href="" class="button">learn more</a>
+    </div>
+    <div class="area1--img1"></div>
+    <div class="area1--img2"></div>
+  </section>
+
 </body>
 </html>
