--- a/Módulo 13_Starbucks/index.html
+++ b/Módulo 13_Starbucks/index.html
@@ -54,5 +54,26 @@
     <div class="area1--img2"></div>
   </section>
 
+  <section class="area2">
+    <div class="area2--content">
+      <div class="bar"></div>
+      <h2>Introducing Vanilla Sweet Cream Cold Brew—Sweet, Creamy, Cold, Bold.</h2>
+      <div class="area2--text">Just before serving, our slow-steeped custom blend Starbucks® Cold Brew Coffee is topped with a delicate float of house-made vanilla sweet cream that cascades throughout the cup.</div>
+
+      <a href="" class="button">learn more</a>
+    </div>
+    <div class="area2--img1"></div>
+    <div class="area2--img2"></div>
+  </section>
+
+  <section class="area3">
+    <div class="area3--content">
+      <h2>The New Ultra Caramel<br/> Frappuccino Is Here!</h2>
+      <div class="area3--text">Congrats on doing that thing! This calls for caramel. Lots of it. With cold brew whipped cream. The new Ultra Caramel Frappuccino is here!</div>
+      <a href="" class="button">learn more</a>
+    </div>
+    <div class="area3--img1"></div>
+  </section>
+
 </body>
 </html>
