--- a/Módulo 13_Starbucks/index.html
+++ b/Módulo 13_Starbucks/index.html
@@ -75,5 +75,22 @@
     <div class="area3--img1"></div>
   </section>
 
+  <section class="area4">
+    <div class="area4--content">
+      <div class="bar"></div>
+      <h2>Kindness Starts With A Cup</h2>
+      <div class="area4--text">Introducing the Cups of Kindness collection: four very special drinks as delicious and refreshing as they are beautiful. Two new creations, Matcha Lemonade and Violet Drink, will join Pink Drink and Ombré Pink Drink as instant summer favorites.</div>
+      <a href="" class="button">learn more</a>
+    </div>
+    <div class="area4--img1"></div>
+  </section>
+
+  <section class="area5"></section>
+
+  <footer>
+    Criado com amor pela B7Web<br/>
+    Créditos do layout para Nicepage
+  </footer> 
+
 </body>
 </html>
