--- a/Módulo 13_Starbucks/index.html
+++ b/Módulo 13_Starbucks/index.html
@@ -88,7 +88,7 @@
   <section class="area5"></section>
 
   <footer>
-    Criado com amor pela B7Web<br/>
+    Criado com amor pela B7Web - Diego<br/>
     Créditos do layout para Nicepage
   </footer> 
 
