--- a/Módulo 15_B7Burger/index.html
+++ b/Módulo 15_B7Burger/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>B7Burger</title>
   <link rel="stylesheet" href="./assets/style.css" type="text/css" />
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -44,5 +46,109 @@
       </div>
     </div>
   </section>
+
+  <section class="search">
+    <div class="container">
+      <div class="title">Pesquise o seu<br /> Hamburguer favorito!</div>
+      <div class="sides">
+        <div class="leftside">
+          <input type="search" placeholder="Digite o nome do Burger">
+        </div>
+        <div class="rightside">
+          <select>
+            <option value="">Selecionar categoria</option>
+            <option value="burgers">Burgers</option>
+            <option value="pizza">Pizza</option>
+            <option value="vegetariano">Vegetariano</option>
+            <option value="kids">Kids</option>
+          </select>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <main>
+    <div class="container">
+      <div class="products-grid">
+        <a href="" class="product-item">
+          <div class="warning">Promoção</div>
+          <div class="photo">
+            <img src="./assets/burgers/burger1.png" alt="">
+          </div>
+          <div class="info">
+            <div class="product-category">Tradicional</div>
+            <div class="product-name">Texas Burger</div>
+            <div class="product-price">R$ 25,50</div>
+          </div>
+        </a>
+
+        <a href="" class="product-item">
+          <div class="photo">
+            <img src="./assets/burgers/burger2.png" alt="">
+          </div>
+          <div class="info">
+            <div class="product-category">Tradicional</div>
+            <div class="product-name">Texas Burger</div>
+            <div class="product-price">R$ 25,50</div>
+          </div>
+        </a>
+
+        <a href="" class="product-item">
+          <div class="photo">
+            <img src="./assets/burgers/burger3.png" alt="">
+          </div>
+          <div class="info">
+            <div class="product-category">Tradicional</div>
+            <div class="product-name">Texas Burger</div>
+            <div class="product-price">R$ 25,50</div>
+          </div>
+        </a>
+
+        <a href="" class="product-item">
+          <div class="photo">
+            <img src="./assets/burgers/burger4.png" alt="">
+          </div>
+          <div class="info">
+            <div class="product-category">Tradicional</div>
+            <div class="product-name">Texas Burger</div>
+            <div class="product-price">R$ 25,50</div>
+          </div>
+        </a>
+
+        <a href="" class="product-item">
+          <div class="photo">
+            <img src="./assets/burgers/burger2.png" alt="">
+          </div>
+          <div class="info">
+            <div class="product-category">Tradicional</div>
+            <div class="product-name">Texas Burger</div>
+            <div class="product-price">R$ 25,50</div>
+          </div>
+        </a>
+
+        <a href="" class="product-item">
+          <div class="photo">
+            <img src="./assets/burgers/burger1.png" alt="">
+          </div>
+          <div class="info">
+            <div class="product-category">Tradicional</div>
+            <div class="product-name">Texas Burger</div>
+            <div class="product-price">R$ 25,50</div>
+          </div>
+        </a>
+
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="logo">
+        <a href="">B7 <span>•</span> Burger</a>
+      </div>
+      <div class="copyrights">criado pela  <a href="">B7Web</a>.</div>
+    </div>
+  </footer>
 </body>
+
 </html>
